--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -19,6 +19,7 @@
     "@sentry/serverless": "^7.57.0",
     "@ucanto/principal": "^8.0.0",
     "@ucanto/server": "^8.0.1",
-    "@ucanto/transport": "^8.0.0"
+    "@ucanto/transport": "^8.0.0",
+    "multiformats": "^12.0.1"
   }
 }
