--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,15 +7,29 @@
   "type": "module",
   "scripts": {
     "build": "tsc --build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "standard",
+    "test": "ava --verbose"
   },
   "author": "Alan Shaw",
   "license": "Apache-2.0 OR MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/web3-storage/content-claims.git"
+  },
+  "bugs": {
+    "url": "https://github.com/web3-storage/content-claims/issues"
+  },
+  "homepage": "https://github.com/web3-storage/content-claims/tree/main/packages/core",
+  "files": [
+    "src",
+    "types"
+  ],
   "exports": {
     ".": "./src/index.js",
     "./server": "./src/server.js",
     "./client": "./src/client.js",
-    "./capabilities": "./src/capabilities.js",
+    "./capability": "./src/capability/index.js",
+    "./capability/assert": "./src/capability/assert.js",
     "./store": "./src/store.js"
   },
   "typesVersions": {
@@ -29,27 +43,29 @@
       "client": [
         "types/client.d.ts"
       ],
-      "capabilities": [
-        "types/capabilities.d.ts"
+      "capability": [
+        "types/capability/index.d.ts"
+      ],
+      "capability/assert": [
+        "types/capability/assert.d.ts"
       ],
       "store": [
         "types/store.d.ts"
       ]
     }
   },
-  "files": [
-    "src",
-    "types"
-  ],
   "dependencies": {
-    "@ucanto/server": "^8.0.1"
+    "@ucanto/client": "^8.0.0",
+    "@ucanto/server": "^8.0.1",
+    "@ucanto/transport": "^8.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/web3-storage/content-claims.git"
-  },
-  "bugs": {
-    "url": "https://github.com/web3-storage/content-claims/issues"
-  },
-  "homepage": "https://github.com/web3-storage/content-claims/tree/main/packages/core"
+  "devDependencies": {
+    "@ipld/dag-cbor": "^9.0.3",
+    "@ucanto/interface": "^8.0.0",
+    "@ucanto/principal": "^8.0.0",
+    "ava": "^5.3.1",
+    "lnmap": "^1.0.1",
+    "multiformats": "^12.0.1",
+    "standard": "^17.1.0"
+  }
 }
