--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "lint": "standard",
-    "test": "ava --verbose"
+    "test": "ava --verbose --timeout=5m --no-worker-threads --serial"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.363.0",
