--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-dynamodb": "^3.363.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/util-dynamodb": "^3.365.0",
+    "@ipld/dag-json": "^10.1.2",
     "@sentry/serverless": "^7.57.0",
     "@ucanto/principal": "^8.0.0",
     "@ucanto/server": "^8.0.1",
