--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -11,11 +11,12 @@
     "@aws-sdk/client-dynamodb": "^3.363.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/util-dynamodb": "^3.365.0",
-    "@ipld/dag-json": "^10.1.2",
     "@sentry/serverless": "^7.57.0",
+    "@ucanto/core": "^8.0.0",
     "@ucanto/principal": "^8.0.0",
     "@ucanto/server": "^8.0.1",
     "@ucanto/transport": "^8.0.0",
+    "carstream": "^1.0.2",
     "multiformats": "^12.0.1"
   },
   "devDependencies": {
