--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,7 +16,7 @@
     "@ucanto/core": "^8.0.0",
     "@ucanto/principal": "^8.0.0",
     "@ucanto/transport": "^8.0.0",
-    "@web3-storage/content-claims": "^0.0.0",
+    "@web3-storage/content-claims": "file:../core",
     "carstream": "^1.0.2",
     "dotenv": "^16.3.1",
     "multiformats": "^12.0.1",
