--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -17,7 +17,9 @@
     "@ucanto/server": "^8.0.1",
     "@ucanto/transport": "^8.0.0",
     "carstream": "^1.0.2",
-    "multiformats": "^12.0.1"
+    "multiformats": "^12.0.1",
+    "p-retry": "^5.1.2",
+    "uint8arrays": "^4.0.4"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.115",
