--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -19,10 +19,12 @@
     "carstream": "^1.0.2",
     "multiformats": "^12.0.1",
     "p-retry": "^5.1.2",
-    "uint8arrays": "^4.0.4"
+    "uint8arrays": "^4.0.4",
+    "varint": "^6.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.115",
+    "@types/varint": "^6.0.1",
     "ava": "^5.3.1",
     "nanoid": "^4.0.2",
     "sst": "^2.8.28",
