--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,6 +20,7 @@
     "carstream": "^1.0.2",
     "dotenv": "^16.3.1",
     "multiformats": "^12.0.1",
+    "parse-duration": "^1.1.0",
     "sade": "^1.8.1",
     "typescript": "^5.1.6"
   }
