--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc --build",
-    "lint": "standard",
+    "lint": "standard && tsc",
     "test": "entail"
   },
   "author": "Alan Shaw",
