--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "lint": "standard",
+    "lint": "standard && tsc",
     "test": "ava --verbose --timeout=5m --no-worker-threads --serial"
   },
   "dependencies": {
