--- a/packages/lambda/tsconfig.json
+++ b/packages/lambda/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
-    "emitDeclarationOnly": true,
+    "noEmit": true,
     "outDir": "dist",
     "allowJs": true,
     "checkJs": true,
