--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -16,7 +16,8 @@
     "@ucanto/principal": "^9.0.0",
     "@ucanto/server": "^9.0.1",
     "@ucanto/transport": "^9.0.0",
-    "carstream": "^1.0.2",
+    "cardex": "^2.3.2",
+    "carstream": "^1.1.1",
     "multiformats": "^12.0.1",
     "p-retry": "^5.1.2",
     "uint8arrays": "^4.0.4",
