--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,7 @@
   "types": "./types/index.d.ts",
   "type": "module",
   "scripts": {
+    "prepare": "npm run build",
     "build": "tsc --build",
     "lint": "standard && tsc",
     "test": "entail"
