ensure standard doesnt lint ./types

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prepare": "npm run build",
     "build": "tsc --build",
-    "lint": "standard && tsc",
+    "lint": "standard src test && tsc",
     "test": "entail"
   },
   "author": "Alan Shaw",
