--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,10 @@ jobs:
     needs: release
     if: force_release_cli || contains(fromJson(needs.release.outputs.paths_released), 'packages/cli')
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v2.4.0
@@ -65,6 +69,6 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build --workspace=packages/cli
-      - run: npm publish --access=public --workspace=packages/cli
+      - run: npm publish --access=public --workspace=packages/cli --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
