fix: export capability api in types

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -70,6 +70,10 @@
       "import": "./types/capability/index.js",
       "types": "./types/capability/index.d.ts"
     },
+    "./capability/api": {
+      "import": "./types/capability/api.js",
+      "types": "./types/capability/api.d.ts"
+    },
     "./capability/assert": {
       "import": "./types/capability/assert.js",
       "types": "./types/capability/assert.d.ts"
