feat: add index claim

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -114,6 +114,7 @@
     "@ucanto/interface": "^10.0.0",
     "@ucanto/server": "^10.0.0",
     "@ucanto/transport": "^9.1.1",
+    "@web3-storage/blob-index": "^1.0.2",
     "carstream": "^2.0.0",
     "multiformats": "^13.1.0"
   },
