feat: add index claim (#66)
Adds `assert/index` to claims that a content graph can be found in
blob(s) that are identified and indexed in the given index CID.

This allows index information to be retrieved for a DAG root CID. The
index information allows a gateway/bitswap peer to extract bytes from a
given location without requesting a content claim for every block in the
DAG.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -120,6 +120,7 @@
   "devDependencies": {
     "@ipld/dag-cbor": "^9.0.3",
     "@ucanto/principal": "^9.0.1",
+    "@web3-storage/blob-index": "^1.0.2",
     "cardex": "^2.3.0",
     "entail": "^2.1.1",
     "lnmap": "^1.0.1",
