feat: publish infra code to npm

--- a/.github/release-please-config.json
+++ b/.github/release-please-config.json
@@ -2,6 +2,7 @@
   "separate-pull-requests": true,
   "packages": {
     "packages/cli": {},
-    "packages/core": {}
+    "packages/core": {},
+    "packages/infra": {}
   }
 }
