--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,3 +79,27 @@ jobs:
       - run: npm publish --access=public --workspace=packages/cli --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+  npm-infra:
+    name: npm publish @web3-storage/content-claims-infra
+    needs: release
+    if: contains(fromJson(needs.release.outputs.paths_released), 'packages/cli') || inputs.force_release_cli
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v2.4.0
+        with:
+          version: 8
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          registry-url: 'https://registry.npmjs.org'
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build --workspace=packages/cli
+      - run: npm publish --access=public --workspace=packages/cli --provenance
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
