--- a/packages/infra/tsconfig.json
+++ b/packages/infra/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "include": ["src"],
+  "exclude": ["node_modules", "types"],
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
-    "noEmit": true,
-    "outDir": "dist",
+    "emitDeclarationOnly": false,
+    "outDir": "types",
     "allowJs": true,
     "checkJs": true,
     "strict": true,
