--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,7 @@ jobs:
   npm-infra:
     name: npm publish @web3-storage/content-claims-infra
     needs: release
-    if: contains(fromJson(needs.release.outputs.paths_released), 'packages/cli') || inputs.force_release_cli
+    if: contains(fromJson(needs.release.outputs.paths_released), 'packages/infra') || inputs.force_release_cli
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -99,7 +99,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
       - run: npm ci
-      - run: npm run build --workspace=packages/cli
-      - run: npm publish --access=public --workspace=packages/cli --provenance
+      - run: npm run build --workspace=packages/infra
+      - run: npm publish --access=public --workspace=packages/infra --provenance
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
