--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -63,5 +63,13 @@
     "nanoid": "^4.0.2",
     "sst": "^2.8.28",
     "testcontainers": "^9.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/w3s-project/content-claims.git"
+  },
+  "bugs": {
+    "url": "https://github.com/w3s-project/content-claims/issues"
+  },
+  "homepage": "https://github.com/w3s-project/content-claims/tree/main/packages/infra"
 }
