--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,5 +24,13 @@
     "parse-duration": "^1.1.0",
     "sade": "^1.8.1",
     "typescript": "^5.1.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/w3s-project/content-claims.git"
+  },
+  "bugs": {
+    "url": "https://github.com/w3s-project/content-claims/issues"
+  },
+  "homepage": "https://github.com/w3s-project/content-claims/tree/main/packages/cli"
 }
