--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc --build",
-    "lint": "standard && tsc",
+    "lint": "standard src test && tsc",
     "test": "ava --verbose --timeout=5m --no-worker-threads --serial"
   },
   "files": [
