--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -111,8 +111,9 @@
   },
   "dependencies": {
     "@ucanto/client": "^9.0.1",
+    "@ucanto/core": "^10.1.1",
     "@ucanto/interface": "^10.0.0",
-    "@ucanto/server": "^10.0.0",
+    "@ucanto/server": "^10.0.2",
     "@ucanto/transport": "^9.1.1",
     "carstream": "^2.0.0",
     "multiformats": "^13.1.0"
